Ensure newly-created chat messages aren't hidden behind chat-input
Ensure streamed message is always visible

--- a/django_app/frontend/src/styles.scss
+++ b/django_app/frontend/src/styles.scss
@@ -155,6 +155,10 @@ body {
   width: 100%;
 }
 
+chat-message {
+  scroll-margin-bottom: 10rem;
+}
+
 .rb-loading-ellipsis {
   font-style: italic;
   margin-top: 1rem;
